crates/aven-check/tests/fixtures/check/valid/open-record-subtyping.av
ada : { name: Text, .. } = { name: "Ada", age: 36 }
both : { name: Text, age: Int, .. } = { name: "Ada", age: 36, extra: 1 }
